--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
     </style>
 </head>
 <body>
-    <div class="container-fluid" style="height: 100vh; display: flex; align-items: center; justify-content: center; position: relative;">
+    <div class="container-fluid" style="height: 590px; display: flex; align-items: center; justify-content: center; position: relative;">
         <div class="animate__animated animate__fadeIn" style="position: absolute; width: 100%; height: 100%; z-index: 1; display: none; align-items: center; justify-content: center;" id="msgSuccess">
             <div style="position: absolute; width: 100%; height: 100%; background: white; opacity: 0.5;"></div>
             <div id="success" style="
@@ -734,7 +734,7 @@
                 box-shadow: -1px 8px 20px 0px gray;
             "
         >
-            <video id="video" autoplay loop style="position: absolute; width: 100%; height: 100%; border-radius: 19px; object-fit: cover; opacity: 0.2; transition: all 3s ease;">
+            <video id="video" autoplay loop muted style="position: absolute; width: 100%; height: 100%; border-radius: 19px; object-fit: cover; opacity: 0.2; transition: all 3s ease;">
                 <source src="fondo4.mp4" type="video/mp4">
             </video>
             <div class="row" style="border-radius: 18px;">
