--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
     </style>
 </head>
 <body>
-    <div class="container-fluid" style="height: 590px; display: flex; align-items: center; justify-content: center; position: relative;">
+    <div class="container-fluid" style="height: 100vh; display: flex; align-items: center; justify-content: center; position: relative;">
         <div class="animate__animated animate__fadeIn" style="position: absolute; width: 100%; height: 100%; z-index: 1; display: none; align-items: center; justify-content: center;" id="msgSuccess">
             <div style="position: absolute; width: 100%; height: 100%; background: white; opacity: 0.5;"></div>
             <div id="success" style="
@@ -724,7 +724,8 @@
         <div 
             class="list-group-item p-0 containerPrincipal" 
             style="
-                width: 85%;
+                width: 95%;
+                margin-top: 95px;
                 position: relative;
                 border-radius: 18px; 
                 background-size: cover; 
