Se ajustan las dimensiones de la vista

--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
 
         .containerPrincipal {
             height: 480px;
+            overflow: auto;
         }
 
         @media screen and (min-width: 1480px) {
