Se corrige la presentación de las animaciones

--- a/index.html
+++ b/index.html
@@ -1516,8 +1516,8 @@
         $('#error').hide();
         $('#success').css('display', 'flex');
         $('#msgSuccess').css('display', 'flex');
-        $('#nombreSuccess').text(result.nombreCompleto);
-        $('#identificacionSuccess').text(result.identificacion);
+        $('#identificacionSuccess').text('10853025698');
+        $('#nombreSuccess').text('Carlos Andrés Pantoja');
 
         setTimeout(() =>
         {
