Se ajustan las dimensiones de la vista.

--- a/index.html
+++ b/index.html
@@ -134,26 +134,27 @@
         }
 
         .containerPrincipal {
-            height: 480px;
-            overflow: auto;
+            height: 482px;
+            overflow-y: auto;
+            overflow-x: hidden;
         }
 
         @media screen and (min-width: 1480px) {
             .patron {
-                width: 40%;
+                width: 27%;
             }
 
             .login {
-                left: 13%;
-                width: 18%;
+                left: 10%;
+                width: 15%;
             }
 
             .profile {
-                width: 42%;
+                width: 34%;
             }
 
             .imagenPatron {
-                width: 85%;
+                width: 69%;
             }
         }
 
