--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/cleave.js/1.0.2/cleave.min.js" integrity="sha512-SvgzybymTn9KvnNGu0HxXiGoNeOi0TTK7viiG0EGn2Qbeu/NFi3JdWrJs2JHiGA1Lph+dxiDv5F9gDlcgBzjfA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <title>Actualizar información</title>
     <style>
         .patron {
@@ -1018,7 +1019,7 @@
                                                 <i class="fas fa-id-card-alt"></i>
                                             </label>
                                         </div>
-                                        <input type="text" class="form-control" id="identificacion" name="identificacion" onblur="buscarDigito()" onkeypress="return event.charCode >= 48 && event.charCode <= 57" placeholder="Número identificación" required>
+                                        <input type="text" class="form-control" id="identificacion" name="identificacion" onblur="buscarDigito()" oninput="formatearCampo(event)" placeholder="Número identificación" required>
                                     </div>
                                 </div>
                                 <div class="col-6 camposFormulario" data-opc="2">
@@ -1517,7 +1518,7 @@
         $('#error').hide();
         $('#success').css('display', 'flex');
         $('#msgSuccess').css('display', 'flex');
-        $('#identificacionSuccess').text('10853025698');
+        $('#identificacionSuccess').text('1.085.302.885');
         $('#nombreSuccess').text('Carlos Andrés Pantoja');
 
         setTimeout(() =>
@@ -1574,5 +1575,13 @@
         {
             $('#msgSuccess').hide().removeClass('animate__fadeOut').addClass('animate__fadeIn');
         }, 1000);
+    }
+
+    function formatearCampo(event)
+    {
+        /** En esta función se formatea el número de identificación */
+        /** ------------------------------------------------------- */
+
+        new Cleave(event.currentTarget, { numeral: true, numeralPositiveOnly: true, numeralDecimalScale: 0, numeralDecimalMark: ',', delimiter: '.' });
     }
 </script>
